--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ STRIPE_SECRET_KEY=pk_test_51QYMKMDHiq60dgWX4X2MB0fOTIGrWCN5w9WIsuzlIAMk1clzWhA9r
 FRONTEND_URL=https://your-frontend-url.vercel.app
 SWAGGER_URL=https://ntc-seat-reservation-api-backend-production.up.railway.app
 PORT=3000
+EMAIL_HOST=smtp.zoho.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=malithwijayathunga@zohomail.com
+EMAIL_PASS=7zZQYz7DMv8f
+EMAIL_FROM="NTC Seat Reservation" malithwijayathunga@zohomail.com
