--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
+    "nodemailer": "^6.9.16",
     "socket.io": "^4.8.1",
     "stripe": "^17.5.0",
     "swagger-jsdoc": "^6.2.8",
